# databricks-CI-CD

./: .env.example  .gitignore  DBX_CI:CD.html  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
docs/: ARCHITECTURE.md  CI_CD.md  SETUP.md  TROUBLESHOOTING.md
resources/: declarative_pipeline.yml  medallion_job.yml  report_job.yml  secret_example_job.yml
src/dbx_cicd_sample/: __init__.py  common.py  sample_data.py
src/dbx_cicd_sample/pipelines/: __init__.py  orders_pipeline.py
src/dbx_cicd_sample/tasks/: __init__.py  bronze.py  gold.py  quality.py  report.py  secret_example.py  silver.py
tests/: test_common.py  test_sample_data.py
